--- a/.gitignore
+++ b/.gitignore
@@ -193,4 +193,6 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+
+.env
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,windows,gradle
